# club

./: Makefile  pomelo.py  pyproject.toml  requirements.txt
css/: main.css
js/: script.js
src/: api.py  app.py  pomelo.py  structs.py
templates/: index.html  tournament_index.html
